--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,26 @@ $ cat .gitignore
 *.a
 # НО отслеживать файл lib.a, несмотря на то, что мы игнорируем все .a файлы с помощью предыдущего правила
 !lib.a
-# игнорировать только файл TODO находящийся в корневом каталоге, не относится к файлам вида subdir/TODO
-/TODO
-# игнорировать все файлы в каталоге build/
+# Xcode
+#
+# gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
+
+## Build generated
 build/
-# игнорировать doc/notes.txt, но не doc/server/arch.txt
-doc/*.txt
-# игнорировать все .txt файлы в каталоге doc/
-doc/**/*.txt
+DerivedData/
+
+## Various settings
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata/
+
+## Other
+*.moved-aside
+*.xccheckout
+*.xcscmblueprint
